--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --project tsconfig.json src/server.ts",
-    "start": "node dist/app.js",
+    "start": "tsc && node dist/app.js",
     "build": "tsc"
   },
   "keywords": [],
