--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "outDir": "dist",
+    "outDir": "public",
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
