--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,15 @@
 {
     "version": 2,
-    "headers": [
+    "builds": [
       {
-        "source": "/(.*)",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://frontend-chat-system.vercel.app"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, PUT, DELETE, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Content-Type, Authorization"
-          },
-          {
-            "key": "Access-Control-Allow-Credentials",
-            "value": "true"
-          }
-        ]
+        "src": "./dist/server.js",
+        "use": "@now/node-server"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/dist/server.js"
       }
     ]
   }
